--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -15,6 +15,7 @@
   outline: none;
   caret-color: #ff00f7; // cursor color
   color: #fff;
+  z-index: 11; // higher than overlay to make it clickable when overlay is active
   &:focus {
     border: none;
     border-bottom: #6f00ff solid 2px;
@@ -27,6 +28,7 @@
   color: inherit;
   font-size: 24px;
   vertical-align: middle;
+  z-index: 11; // higher than overlay to make it clickable when overlay is active 
 }
 
 .close {
@@ -87,4 +89,22 @@ li.list-group-item {
 .content-container {
   flex: 1;
   word-wrap: break-word;
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #110141;  /* black color */
+  opacity: 0.8;
+  pointer-events: none;
+  z-index: 10; /* higher than other elements to create overlay */
+}
+
+.custom-z-index-searchlist {
+  position: relative; /* to make it on top of the overlay */
+  z-index: 11; /* higher than overlay */
 }
