--- a/src/styles/components/_variables.scss
+++ b/src/styles/components/_variables.scss
@@ -31,6 +31,7 @@ $text-color : #ddd0fb;
 $background-color: #0a0312;
 
 //logos
-$MainLogo: url('../../assets/logos/MainLogoNoletters.svg');
-$MainLogo2: url('../../assets/logos/fullWhiteLetters.png');
-$MainLogo3: url('../../assets/logos/fullDarkAndWhiteLetters.png');
+$logoPath: '../../../src/assets/logos/';
+$MainLogo: url('#{$logoPath}MainLogoNoletters.svg');
+$MainLogo2: url('#{$logoPath}FullWhiteLetters.png');
+$MainLogo3: url('#{$logoPath}FullDarkAndWhiteLetters.png');
